--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -21,3 +21,12 @@ body{
     font-weight: 700;
     line-height: normal;
 }
+.h2{
+    color: #000;
+    text-align: center;
+    font-family: Inika;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
