--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -49,13 +49,7 @@ body{
     font-weight: 700;
     line-height: normal;  
 }
-.icon{
-    border: 1px solid #000;
-    width: 10%;
-    height: 10%;
-    margin: 2%;
-    margin-top: 0%;
-}
+
 .p{
     text-align: center;
     background-color: #0000003f ;
@@ -75,5 +69,15 @@ body{
     justify-content: space-between; /* Distribuye los elementos de manera uniforme */
   }
   .containericon {
-
+    display: flex;
+    justify-content: space-between; /* Distribuye los elementos de manera uniforme */
   }
+  .icon{
+    border: 1px solid #000;
+    width: 10%;
+    height: 10%;
+    margin: 2%;
+    margin-top: 0%;
+    max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
+    height: auto;
+}
