--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -15,7 +15,7 @@ body{
     background-size: cover;
 }
 
-.h1{
+.h{
     background-color:  #00000016;
     background-color: #0000003f ;
     padding-top: 5%;
@@ -24,31 +24,38 @@ body{
     color: #000;
     text-align: center;
     font-family: Inika;
-    font-size: 50px;
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.h1{
+    background-color:  #00000016;
+    background-color: #0000003f ;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border: 1px solid #000;
+    color: #000;
+    text-align: center;
+    font-family: Inika;
+    font-size: 30px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
 
 .h2{
+    width: 20%;
     color: #000;
     text-align: center;
     font-family: Inika;
-    font-size: 20px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     padding: 5%;
     padding-bottom: 2%;
-}
-.p{
-    color: #000;
-    text-align: center;
-    font-family: Inika;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;  
 }
 
 .p{
@@ -60,26 +67,32 @@ body{
     margin: 5%;
     color: #ffffff;
     font-family: Inika;
-    font-size: 15px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
 .container {
     display: flex;
-    justify-content: space-between; /* Distribuye los elementos de manera uniforme */
+    width: 100%;
   }
-  .containericon {
+.containericon {
     display: flex;
-    justify-content: space-between; /* Distribuye los elementos de manera uniforme */
+    justify-content: space-between;
+    width: 100%;
   }
-  .icon{
-    border: 1px solid #000;
-    width: 10%;
-    height: 10%;
-    margin: 2%;
-    margin-top: 0%;
-    max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
-    height: auto;
+.icon{
+    text-align: center;
     border-radius: 7px;
+    width: 20%;
 }
+.image{
+    width: 120px;
+    height: 120px;
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+.image:hover{
+    
+}
+
