--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -93,11 +93,12 @@ body{
     border-radius: 10px;
 }
 .homeicon{
-    <a href="./public/contact.html"><img class="image" src="./images/Icon.jpg"/>
-    width: 120px;
-    height: 120px;
+    display: flex;
+    width: 15%;
+    height: 100%;
     border: 1px solid #000;
     border-radius: 10px;
+
 }
 
 
