--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -9,14 +9,13 @@ a{
 body{
     border: 1px solid #000;
     border-bottom: none;
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/background2.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 
 .h{
-    background-color:  #00000016;
     background-color: #0000003f ;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -31,11 +30,11 @@ body{
 }
 
 .h1{
-    background-color:  #00000016;
-    background-color: #0000003f ;
+
+    
     padding-top: 2%;
     padding-bottom: 2%;
-    border: 1px solid #000;
+    
     color: #000;
     text-align: center;
     font-family: Inika;
@@ -43,6 +42,11 @@ body{
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+.cuadrado{
+    background-color: #0000003f ;
+    border: 1px solid #000;
+    
 }
 
 .h2{
@@ -94,8 +98,8 @@ body{
 }
 .homeicon{
     display: flex;
-    width: 15%;
-    height: 100%;
+    width: 70px;
+    height: 70px;
     border: 1px solid #000;
     border-radius: 10px;
 
