--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -100,7 +100,8 @@ body{
     width: 70px;
     height: 70px;
     border: 1px solid #000;
-    border-radius: 10px;
+    border-radius: 15px;
+    margin: 15px;
 
 }
 
