--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -75,6 +75,21 @@ body{
     font-weight: 700;
     line-height: normal;
 }
+
+.p2{
+    text-align: justify;
+    background-color: #0000003f ;
+    padding: 5%;
+    border: 1px solid #000;
+    margin: 5%;
+    color: #000000;
+    font-family: Inika;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 .container {
     display: flex;
     width: 100%;
@@ -104,5 +119,7 @@ body{
     margin: 15px;
 
 }
-
+ .image:hover{
+    color: #da1717ad
+ }
 
