--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -104,6 +104,12 @@ body{
     border-radius: 7px;
     width: 20%;
 }
+.icon2{
+    text-align: center;
+    border-radius: 7px;
+    width: 25%;
+}
+
 .image{
     width: 120px;
     height: 120px;
