--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -135,5 +135,59 @@ body{
 
  .imgtopic{
     width: 50%;
-    border: 1 px #000;
+    height: 500px;
+    border: 1px solid black; 
+    margin: 5px; 
  }
+
+ .contenedor-imagenes {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .imagen {
+    height: 500px;
+    border: 1px solid black; 
+    margin: 5px; 
+    width: 30%;
+  }
+  .form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  .formu {
+    max-width: 400px;
+    width: 100%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 8px;
+  }
+  
+  input,
+  textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+  }
+  
+  button {
+    background-color: #d49986;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #ca7733;
+  }
