--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -123,22 +123,29 @@ body{
     border: 1px solid #000;
     border-radius: 15px;
     margin: 15px;
-
 }
- .image:hover{
-    color: #da1717ad
- }
 
  .link{
     color: aliceblue;
  }
 
- .imgtopic{
-    width: 50%;
-    height: 500px;
-    border: 1px solid black; 
-    margin: 5px; 
- }
+ .contenedor-imagenes {
+    display: flex;
+    justify-content: space-between; /* Distribuye uniformemente las imágenes en una línea */
+    align-items: center; /* Centra verticalmente las imágenes */
+  }
+  
+  .imgtopic {
+    text-decoration: none; /* Quita la subrayado del enlace */
+  }
+  
+  .imgtopic img {
+    max-width: 100%; /* Asegura que las imágenes no excedan el ancho del contenedor */
+    height: auto; /* Mantiene la proporción de la imagen */
+    border: 1px solid #ddd; /* Añade un borde alrededor de la imagen */
+    border-radius: 8px; /* Agrega bordes redondeados */
+    margin: 0 5px; /* Añade un espacio entre las imágenes según sea necesario */
+  }
 
  .contenedor-imagenes {
     display: flex;
@@ -151,6 +158,7 @@ body{
     margin: 5px; 
     width: 30%;
   }
+
   .form-container {
     display: flex;
     justify-content: center;
@@ -158,12 +166,13 @@ body{
     height: 100vh;
   }
   
-  .formu {
+  .form {
     max-width: 400px;
     width: 100%;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    background-color:#0000003f;
   }
   
   label {
