--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -131,25 +131,16 @@ body{
 
  .contenedor-imagenes {
     display: flex;
-    justify-content: space-between; /* Distribuye uniformemente las imágenes en una línea */
-    align-items: center; /* Centra verticalmente las imágenes */
-  }
-  
-  .imgtopic {
-    text-decoration: none; /* Quita la subrayado del enlace */
+    justify-content: space-between;
+    align-items: center;
   }
   
   .imgtopic img {
-    max-width: 100%; /* Asegura que las imágenes no excedan el ancho del contenedor */
-    height: auto; /* Mantiene la proporción de la imagen */
-    border: 1px solid #ddd; /* Añade un borde alrededor de la imagen */
-    border-radius: 8px; /* Agrega bordes redondeados */
-    margin: 0 5px; /* Añade un espacio entre las imágenes según sea necesario */
-  }
-
- .contenedor-imagenes {
-    display: flex;
-    justify-content: space-between;
+    height: 350px;
+    border: 1px solid #000000;
+    border-radius: 8px;
+    margin: 0 5px;
+    width: 500px;
   }
   
   .imagen {
