--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -161,7 +161,7 @@ body{
     max-width: 400px;
     width: 100%;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 8px;
     background-color:#0000003f;
   }
